1.15-beta.4 (#50)
* 1.15-test.1

- BotCommand.handleError is protected
- BotCommand.handleError shows the entire error stack
- Added new bot setting for paper trade info
- Added onModalInteraction in CommandsHandler
- Prevent potentially problematic area with Crab notifications
- Renamed PaperTrade interface to IPaperTrade to prevent conflict
- Launcher adds initializing of the paper trading handler
- Added interface for ModalCommand
- Fleshed out PaperTrade command more
- Fleshed out PaperTradeAccount with logic
- Added deserializer for paper trading file
- Fleshed out paper trading handler
- Renamed PaperTradingLeaderboard to ServerPaperTrades
- Added a breakeven feature for longs
- Fixed potential validation bug in PositionsDataHandler.getPriceData
- Added a helper method to convert BigInteger val to a double in PriceData
- Updated the settings example json
- Removed constructors from BotSettings
- Update GSON from 2.9.1 to 2.10 for record support
- Bump pom.xml

* 1.15-test.2

- Potentially added stuff related to history for paper trades
- Removed USDC button since buying/selling is in USDC terms
- Added PNL to the view page for paper trades
- Formatted the confirmation page to limit the decimals
- Remove calculatePnl from PaperTradeAccount
- Bump pom.xml

* 1.15-beta.1 Early release without paper trading

- Disable PaperTrade command temporarily
- Fix Crab auctions not properly taking into account UTC
- Bump pom.xml

* 1.15-beta-test.2 (wip)

- Formatted some areas
- Add a max. of how much you can buy or sell
- Formatted numbers to show lower decimals
- Made PaperTradeAccount.assetPriceInUsd
- Bump pom.xml

* 1.15-beta-test.2

- Fixed incorrect parentheses placement that caused an uncaught error

* 1.15-beta-test.3

- Added ETH price at rebalance and price hedge estimates
- Bump pom.xml

* 1.15-beta-test.4

- Renamed LONG_OSQTH to OSQTH in IPaperTrade including any references to it
- Resolve non-ETHUSD a